# noctane

./: Cargo.toml  README.md  notes.md  progress.md  rustfmt.toml
cdrom/: Cargo.toml
cdrom-drive/: Cargo.toml
cdrom-drive/src/: lib.rs  raw.rs  volume.rs
cdrom/src/: lib.rs  volume.rs
cdrom/src/volume/: raw.rs
core/: Cargo.toml
core/benches/: cpu.rs
core/examples/: debugger.rs  disas.rs  emu.rs  emu_cli.rs  wasm.rs
core/src/: lib.rs  log.rs
core/src/bios/: func.rs
cpu/: Cargo.toml
cpu/examples/: disas.rs
cpu/src/: bus.rs  cache.rs  cpu.rs  exc.rs  i_cache.rs  instr.rs  lib.rs  mem.rs  mmu.rs  reg.rs  sym.rs
cpu/src/bus/: io.rs
cpu/src/cache/: i.rs
cpu/src/cache/i/: entry.rs
cpu/src/cpu/: i_cache.rs  pipeline.rs  reg.rs
cpu/src/instr/: asm.rs  decode.rs
gpu/: Cargo.toml
gpu/src/: cmd.rs  gfx.rs  lib.rs
gpu/src/cmd/: gp0.rs  gp1.rs
gpu/src/cmd/gp0/: decode.rs
gpu/src/gfx/: fragment.wgsl  vertex.wgsl
gpu/src/gfx/surface/: fragment.wgsl  vertex.wgsl
gpu/src/gfx/vram/: fragment.wgsl  vertex.wgsl
mem/: Cargo.toml
mem/src/: lib.rs
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
proc-macro/src/cpu/bus/: io.rs
ui/: Cargo.toml  i18n.toml
ui/examples/: emu.rs  emu_gui.rs
ui/i18n/en-US/: noctane_ui.ftl
ui/src/: lib.rs  log.rs  menu_bar.rs  window.rs
ui/src/menu_bar/: about.rs
ui/src/window/: about.rs  game.rs  log.rs  main.rs  prefs.rs
ui/src/window/game/: gfx.rs
ui/src/window/game/shader/: vertex.wgsl
util/: Cargo.toml
util/src/: bios.rs  game.rs  hex.rs  lib.rs
util/src/bios/: func.rs
util/src/game/: gfx.rs
