# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[workspace]
resolver = "2"
members = [
    "cdrom",
    "core",
    "cpu",
    "gpu",
    "ui",
    "util"
]

[profile.release]
lto = "yes"

[profile.release-with-debug]
inherits = "release"
debug = true
