# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "noctane-cdrom"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
derivative = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1"
serde_repr = "0.1"
tracing = "0.1"
