# SPDX-License-Identifier: MPL-2.0

[package]
name = "noctane"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "cpu"
harness = false

[dependencies]
noctane-cpu = { path = "../cpu" }
noctane-gpu = { path = "../gpu" }
noctane-util = { path = "../util" }
pollster = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu-types = "0.13"
winit = "0.26"

[dev-dependencies]
criterion = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "DataTransfer", "Document", "DragEvent", "Element", "File", "FileList", "ReadableStream", "ReadableStreamDefaultReader", "Window"] }
