# SPDX-License-Identifier: MPL-2.0

[package]
name = "noctane"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "cpu"
harness = false

[dependencies]
instant = { version = "0.1", features = ["stdweb"] }
noctane-cpu = { path = "../cpu" }
noctane-gpu = { path = "../gpu" }
noctane-util = { path = "../util" }
pollster = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu-types = { git = "https://github.com/JolifantoBambla/wgpu" }
winit = "0.26"

[dev-dependencies]
criterion = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wasm_thread = { version = "0.2", features = ["es_modules"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.58", features = [
    "Blob",
    "DataTransfer",
    "Document",
    "DragEvent",
    "Element",
    "File",
    "FileList",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Window"
] }
