# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "noctane-cpu"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
bit = "0.1"
bitfield = "0.13"
const_queue = "0.1"
noctane-gpu = { path = "../gpu" }
noctane-util = { path = "../util" }
noctane-proc-macro = { path = "../proc-macro" }
tracing = "0.1"

[dev-dependencies]
rand = "0.8"
