# SPDX-License-Identifier: MPL-2.0

[package]
name = "noctane-cpu"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
bit = "0.1"
bitfield = "0.13"
const_queue = "0.1"
indoc = "1.0"
noctane-gpu = { path = "../gpu" }
noctane-proc-macro = { path = "../proc-macro" }
noctane-util = { path = "../util" }
tracing = "0.1"

[dev-dependencies]
rand = "0.8"
