# SPDX-License-Identifier: MPL-2.0

[package]
name = "noctane-gpu"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
bitflags = "1.3"
bytemuck = "1.9"
noctane-util = { path = "../util" }
raw-window-handle = { version = "0.4", features = ["alloc"] }
ringbuffer = "0.8"
stackvec = "0.2"
tracing = "0.1"
wgpu = "0.12"
