# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "noctane-ui"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
boing = { git = "https://github.com/norepimorphism/boing" }
derive_builder = "0.11"
fluent = "0.16"
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6"
native-dialog = "0.6"
noctane-cdrom-drive = { path = "../cdrom-drive" }
open = "2.1"
png = "0.17"
rust-embed = "6.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
